@@ -159,7 +159,6 @@ Term::Clui                                     = 1.76
 Term::EditLine                                 = 0.11
 Test::Alien::CPP                               = 1.02
 Test::CChecker                                 = 0.10
-Test::Exec                                     = 0.04
 Test::Fixme                                    = 0.16
 Test::Script                                   = 1.27
 Test::Version                                  = 2.09
@@ -168,8 +167,9 @@ Test2::Tools::FFI                              = 0.05
 Test2::Tools::HTTP                             = 0.09
 Test2::Tools::HTTP::UA::Mojo                   = 0.04
 Test2::Tools::JSON::Pointer                    = 0.02
-Test2::Tools::PerlCritic                       = 0.03
-Test2::Tools::URL                              = 0.05
+Test2::Tools::PerlCritic                       = 0.04
+Test2::Tools::Process                          = 0.05
+Test2::Tools::URL                              = 0.06
 Text::Hunspell::FFI                            = 0.02
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.07
